Update: Tab navigation improvement

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -16,7 +16,7 @@
     
     <div class="chat-container">
         <ul class="tabs-heading">
-            <li data-target="lesson_plan">Lesson plan</li>
+            <li data-target="lesson_plan" class="active">Lesson plan</li>
             <li data-target="episodes">Episodes</li>
             <li data-target="content">Content</li>
             <li data-target="facilitator_script">Script</li>
