Refactor: Logo and Setting are now global

--- a/pricings/templates/pricings/pricing.html
+++ b/pricings/templates/pricings/pricing.html
@@ -19,7 +19,7 @@
     <button class="choose-button">Choose Plan</button>
   </div>
 
-  <div class="user-options">
+  {% comment %} <div class="user-options">
     <button class="btn user-btn" onclick="toggleDropdown()">
         <i class='bx bxs-user'></i>
     </button>
@@ -33,7 +33,7 @@
 
   <div class="logo">
     <a href="{% url 'kunwariwebpage:index'%}"><button class="btn btn-logo">Logo</button></a>
-  </div>
+  </div> {% endcomment %}
 </div>
 
 <script> // USER DROPDOWN
