--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,17 @@
 </head>
 
 <body>
+    {% include 'navbar.html' %}
+
     {% if messages %}
         {% for message in messages %}
             {{message}}
         {% endfor%}
     {% endif %}
+
     {% block maincontent%}
     {% endblock %}
+
     <script src="{% static 'index.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel = "stylesheet" href = "{% static 'style.css' %}">
