Added: Image as Input Prompt

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -3,11 +3,12 @@
 
 <div class="body-index">
     {% comment %} <form action="{% url 'kunwariwebpage:chatbot'%}" method="post" enctype="multipart/form-data"> {% endcomment %}
-    <form>
+    <form enctype="multipart/form-data">
         {% csrf_token %}
         <h1>Kunwari Activator</h1>
         <textarea id="prompt" placeholder="eg. mathematics, 60 minutes, learning objectives" name="prompt"></textarea>
-        <button class="submit" type="submit" id="submit-to-chatgpt">Send</button>
+        <input type="file" id="img" name="img" accept="image/*" multiple>
+        <button class="submit" type="submit" id="submit-to-chatgpt">Generate Lesson Plan</button>
         <button class="submit" type="submit" id="generate-episodes" hidden>Generate Episodes</button>
         <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
         <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
