--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 
     <script src="{% static 'index.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://unpkg.com/turndown/dist/turndown.js"></script>
     <link rel = "stylesheet" href = "{% static 'style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </body>
