Added: New button for downloading both content and faci script

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -29,7 +29,8 @@
         </div>
         <div class="message-download">
             {% comment %} <button class="submit btn-under-gptresponse" id="download-pptx" disabled>Download</button> {% endcomment %}
-            <button class="submit btn-under-gptresponse" type="submit" id="generate-pptx" >Download</button>
+            <button class="submit btn-under-gptresponse" type="submit" id="generate-pptx" disabled>Download</button>
+            <button class="submit btn-under-gptresponse" type="submit" id="compile-all-and-generate-pptx" disabled>Download All</button>
             <button class="submit btn-under-gptresponse" onClick="window.location.href=window.location.href" >Reset</button>
             <p id="message"></p>
         </div>
