--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -31,30 +31,30 @@
   </div>
 
   <div class="form-box register">
-    <form action="{% url 'users:register_user'%}" method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <h1>Registration</h1>
       <div class="input-box">
-        <input type="text" placeholder="First Name" required name="register-firstname">
+        <input type="text" placeholder="First Name" required id="register-firstname">
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Last Name" required name="register-lastname">
+        <input type="text" placeholder="Last Name" required id="register-lastname">
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Username" required name="register-username">
+        <input type="text" placeholder="Username" required id="register-username">
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="email" placeholder="Email" required name="register-email">
+        <input type="email" placeholder="Email" required id="register-email">
         <i class='bx bxs-envelope'></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Password" required name="register-password">
+        <input type="password" placeholder="Password" required id="register-password">
         <i class='bx bxs-lock-alt' ></i>
       </div>
-      <button type="submit" class="btn">Register</button>
+      <button type="submit" class="btn" id="register-submit-btn">Register</button>
       <p>or register with social platforms</p>
       <div class="social-icons">
         <a href="#"><i class='bx bxl-google' ></i></a>
