Update: Button enabling and disabling

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -8,10 +8,10 @@
         <h1>Kunwari Activator</h1>
         <textarea id="prompt" placeholder="eg. mathematics, 60 minutes, learning objectives" name="prompt"></textarea>
         <input type="file" id="files" name="files" accept=".docx, .pdf, .txt, image/*" multiple>
-        <button class="submit" type="submit" id="submit-to-chatgpt">Generate Lesson Plan</button>
-        <button class="submit" type="submit" id="generate-episodes" hidden>Generate Episodes</button>
-        <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
-        <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
+        <button class="submit" type="submit" id="submit-to-chatgpt" disabled>Generate Lesson Plan</button>
+        {% comment %} <button class="submit" type="submit" id="generate-episodes" disabled>Generate Episodes</button> {% endcomment %}
+        <button class="submit" type="submit" id="generate-content" disabled>Generate Content</button>
+        <button class="submit" type="submit" id="generate-facilitator-script" disabled>Generate Facilitator Script</button>
     </form>
     
     <div class="chat-container">
