--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -7,7 +7,10 @@
         {% csrf_token %}
         <h1>Kunwari Activator</h1>
         <textarea id="prompt" placeholder="eg. mathematics, 60 minutes, learning objectives" name="prompt"></textarea>
-        <input type="file" id="files" name="files" accept=".docx, .pdf, .txt, image/*" multiple>
+        {% comment %} this is the input field that i am talking about {% endcomment %}
+        {% comment %} <input type="file" id="files" name="files" accept=".docx, .pdf, .txt, image/*" multiple> {% endcomment %}
+        <input type="file" id="filesInput" name="files" accept=".docx, .pdf, .txt, image/*" multiple>
+        <div id="filePreviewList" class="file-list"></div>
         <button class="submit" type="submit" id="submit-to-chatgpt" disabled>Generate Lesson Plan</button>
         {% comment %} <button class="submit" type="submit" id="generate-episodes" disabled>Generate Episodes</button> {% endcomment %}
         <button class="submit" type="submit" id="generate-content" disabled>Generate Content</button>
